--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Module 3 Solution</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
-<body>
+<body id="bckgrnd">
   <header>
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
-            <div id="logo-img"></div>
-          </a>
 
+          <div class="navbar-brand">
+            <a href="index.html"><h1>Food, LLC</h1></a>
+          </div>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -24,27 +26,45 @@
         </div>
 
         <div id="collapsable-nav" class="collapse navbar-collapse">
-           
+           <ul id="nav-list" class="nav navbar-nav navbar-right">
+            <li class="visible-xs">
+              <a href="#">Chicken</a>
+            </li>
+            <li class="visible-xs">
+              <a href="#">Beef</a>
+            </li>
+            <li class="visible-xs">
+              <a href="#">Sushi</a>
+            </li>
         </div><!-- .collapse .navbar-collapse -->
       </div><!-- .container -->
     </nav><!-- #header-nav -->
   </header>
+  
 
-  <div id="call-btn" class="visible-xs">
-    <a class="btn" href="tel:410-602-5008">
-    <span class="glyphicon glyphicon-earphone"></span>
-    410-602-5008
-    </a>
-  </div>
-  <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
+  <div id="main-content" class="container"> <!-- Main Content Begin -->
+    <h1 class="text-center">Our Menu</h1>
+    <section class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> <div id="container">
+        <div id="p1" class="text-center">Chicken</div>
+        <p>Lorem ipsum dolor sit amet, illum quidam signiferumque qui et, malorum pertinacia et has, nostrum delicatissimi vis ei. Modus fabulas ad eos. Ad mutat saepe repudiandae vix. Esse nonumes accusamus ius ex, in graece iriure usu, delicatissimi interpretaris pro ne. Ut pro legere patrioque, dictas vocibus vel te. Ut sale partem epicurei est, convenire consequuntur an est, cu pro summo epicurei. Noster numquam molestie te his. Dicant ceteros has an, eu vel recusabo percipitur. Ad vis euismod vivendum conclusionemque, insolens necessitatibus cu his. Molestiae laboramus consetetur per ex, reque dolorum eleifend in sit. Reque semper honestatis qui ne, putant everti consequat mea at.<br><br>
 
-  <div id="main-content" class="container">
-    
+        Lorem ipsum dolor sit amet, illum quidam signiferumque qui et, malorum pertinacia et has, nostrum delicatissimi vis ei. Modus fabulas ad eos. Ad mutat saepe repudiandae vix. Esse nonumes accusamus ius ex, in graece iriure usu, delicatissimi interpretaris pro ne. Ut pro legere patrioque, dictas vocibus vel te. Ut sale partem epicurei est, convenire consequuntur an est, cu pro summo epicurei. Noster numquam molestie te his. Dicant ceteros has an, eu vel recusabo percipitur. Ad vis euismod vivendum conclusionemque, insolens necessitatibus cu his. Molestiae laboramus consetetur per ex, reque dolorum eleifend in sit. Reque semper honestatis qui ne, putant everti consequat mea at.<br><br>
 
-  </div>
+        Lorem ipsum dolor sit amet, illum quidam signiferumque qui et, malorum pertinacia et has, nostrum delicatissimi vis ei. Modus fabulas ad eos. Ad mutat saepe repudiandae vix. Esse nonumes accusamus ius ex, in graece iriure usu, delicatissimi interpretaris pro ne. Ut pro legere patrioque, dictas vocibus vel te. Ut sale partem epicurei est, convenire consequuntur an est, cu pro summo epicurei. Noster numquam molestie te his. Dicant ceteros has an, eu vel recusabo percipitur. Ad vis euismod vivendum conclusionemque, insolens necessitatibus cu his. Molestiae laboramus consetetur per ex, reque dolorum eleifend in sit. Reque semper honestatis qui ne, putant everti consequat mea at. <br><br>
+
+        Lorem ipsum dolor sit amet, illum quidam signiferumque qui et, malorum pertinacia et has, nostrum delicatissimi vis ei. Modus fabulas ad eos. Ad mutat saepe repudiandae vix. Esse nonumes accusamus ius ex, in graece iriure usu, delicatissimi interpretaris pro ne. Ut pro legere patrioque, dictas vocibus vel te. Ut sale partem epicurei est, convenire consequuntur an est, cu pro summo epicurei. Noster numquam molestie te his. Dicant ceteros has an, eu vel recusabo percipitur. Ad vis euismod vivendum conclusionemque, insolens necessitatibus cu his. Molestiae laboramus consetetur per ex, reque dolorum eleifend in sit. Reque semper honestatis qui ne, putant everti consequat mea at. <br><br>
+
+        Lorem ipsum dolor sit amet, illum quidam signiferumque qui et, malorum pertinacia et has, nostrum delicatissimi vis ei. Modus fabulas ad eos. Ad mutat saepe repudiandae vix. Esse nonumes accusamus ius ex, in graece iriure usu, delicatissimi interpretaris pro ne. Ut pro legere patrioque, dictas vocibus vel te. Ut sale partem epicurei est, convenire consequuntur an est, cu pro summo epicurei. Noster numquam molestie te his. Dicant ceteros has an, eu vel recusabo percipitur. Ad vis euismod vivendum conclusionemque, insolens necessitatibus cu his. Molestiae laboramus consetetur per ex, reque dolorum eleifend in sit. Reque semper honestatis qui ne, putant everti consequat mea at.<br><br>
+
+        Lorem ipsum dolor sit amet, illum quidam signiferumque qui et, malorum pertinacia et has, nostrum delicatissimi vis ei. Modus fabulas ad eos. Ad mutat saepe repudiandae vix. Esse nonumes accusamus ius ex, in graece iriure usu, delicatissimi interpretaris pro ne. Ut pro legere patrioque, dictas vocibus vel te. Ut sale partem epicurei est, convenire consequuntur an est, cu pro summo epicurei. Noster numquam molestie te his. Dicant ceteros has an, eu vel recusabo percipitur. Ad vis euismod vivendum conclusionemque, insolens necessitatibus cu his. Molestiae laboramus consetetur per ex, reque dolorum eleifend in sit. Reque semper honestatis qui ne, putant everti consequat mea at.<br><br>
+        Lorem ipsum dolor sit amet, illum quidam signiferumque qui et, malorum pertinacia et has, nostrum delicatissimi vis ei. Modus fabulas ad eos. Ad mutat saepe repudiandae vix. Esse nonumes accusamus ius ex, in graece iriure usu, delicatissimi interpretaris pro ne. Ut pro legere patrioque, dictas vocibus vel te. Ut sale partem epicurei est, convenire consequuntur an est, cu pro summo epicurei. Noster numquam molestie te his. Dicant ceteros has an, eu vel recusabo percipitur. Ad vis euismod vivendum conclusionemque, insolens necessitatibus cu his. Molestiae laboramus consetetur per ex, reque dolorum eleifend in sit. Reque semper honestatis qui ne, putant everti consequat mea at.<br><br></p>
+      </div>
+    </section>
+  </div> <!-- Main Content End -->
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/jquery-1.11.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
 </body>
